reduce several duplicates

--- a/final_report/final-report.qmd
+++ b/final_report/final-report.qmd
@@ -23,7 +23,7 @@ This project supports our partner, ["heymate!"](https://www.heymate.ca)(hereafte
 
 Our capstone partner, Heymate, offers an all-in-one business management platform, primarily serving restaurant clients. However, many of these restaurant owners struggle to design menus that align with customer preferences and evolving market trends due to limited access to broader market data. Our project aims to bridge that gap by transforming publicly available menu data into structured insights that support data-informed menu design, enabling the partner to deliver greater value to its clients through market-driven recommendations.
 
-Our initial resource was internal database provided by Heymate, containing thousands of raw menu records from their clients. However, the internal data alone was insufficient to support robust recommendation modeling due to limited scale of menu and lack of trending information. To address this, we explored various open-source datasets, and found a menu dataset containing millions of menu records along with associated popularity metrics on Uber Eats (@sakib2023ubereats), making it a strong data source in terms of scale, quality, and coverage.
+Our initial resource was internal database provided by Heymate, containing thousands of raw menu records from their clients. However, the internal data alone was insufficient to support robust recommendation modeling due to limited scale of menu and lack of trending information. Specifically, the internal dataset only includes around 300 restaurants, which limits its representativeness and diversity for building a generalizable recommendation system. To address this, we explored various open-source datasets, and found a menu dataset containing millions of menu records along with associated popularity metrics on Uber Eats (@sakib2023ubereats), making it a strong data source in terms of scale, quality, and coverage.
 
 However, messy data, large-scale datasets, and customized menu item names posed significant challenges to the construction of our recommendation system. Therefore, our scientific objective was to design an end-to-end pipeline that leverages diverse data science techniques to build a robust and scalable recommendation system, powered by a popularity-based knowledge base and capable of handling multi-type inputs.
 
@@ -134,19 +134,17 @@ With this module, we were able to clean inconsistent menu data into a structured
 ![Recommendations Workflow](../image/final_5_recommendation_flow.png){#fig-rec-flow width="80%" fig-align="center"}
 
 #### Feature Integration
-Once the LLM produces cleaned menu data (in table `cleaned_menu_mds`), we proceeded to feature integration, enriching this data with relevant popularity metrics.
-At this stage, we:
 
-- Joined the cleaned Uber Eats menu data (text data) with popularity metrics in the original Uber Eats metadata table `Restaurants_mds`, which contains rating counts and rating scores.
-- This step allowed us to bring back three key popularity indicators that were temporarily removed during cleaning:
-    - Number of Ratings: how many users rated the dish
-    - Average Rating: the restaurant average rating score given by users
-    - Item Frequency: how often a dish appears, counting occurrences grouped by dish base, dish flavor, and restaurant type
-- We also removed entries where `is_combo == True` to avoid noise in popularity estimates.
+Once the data cleaning module produces cleaned menu data (stored in `cleaned_menu_mds`), we enrich it by joining with the Uber Eats metadata table (`Restaurants_mds`) to reintroduce three key popularity indicators that had been excluded during the cleaning phase:
 
-The resulting dataset forms the **core knowledge base**, a structured, popularity-aware version of Uber Eats data, on which all recommendations are based.
+- Number of Ratings: how many users rated the dish
+- Average Rating: the restaurant average rating score given by users
+- Item Frequency: how often a dish appears, counting occurrences grouped by dish base, dish flavor, and restaurant type
+
+To ensure that combination meals don’t distort the popularity signals, we filter out all entries flagged as combos (`is_combo == True`). The resulting dataset serves as the foundation for our **core knowledge base**.
 
 ### Normalize Matrix
+
 For popularity score calculation, as the raw values of frequency or rating counts can be heavily skewed or on different scales. We applied **MinMaxScaler** to rescale them to the [0, 1] range to ensure that the three indicators (rating counts, rating scores, frequency) are comparable and balanced.
 
 Normalized columns include:
@@ -168,6 +166,7 @@ These weights were selected based on exploratory testing and domain intuition fr
 - **60% rating count: (`rating_scaled`)** Measures how many people have reviewed; we viewed it  as the strongest proxy of broad customer engagement.
 - **20% average score: (`score_scaled`)** captures perceived quality but is often biased by low volume.
 - **20% frequency: (`freq_scaled`)** reflects widespread presence on menus but doesn’t always indicate desirability.  
+
 All computed scores are stored in a SQL table: `cleaned_menu_with_popularity`
 This becomes the knowledge base table used for filtering and recommendations.
 
@@ -177,7 +176,7 @@ At recommendation time, the system:
 
 1. Accepts input from a restaurant partner (up to 3 restaurant types)
 2. Filters the knowledge base (`cleaned_menu_with_popularity`) using:
-    - Exact matches on restaurant_type_std
+    - Exact matches on `restaurant_type_std`
     - Filters out duplicate dishes (e.g. same base/flavor combo for the same type)
 3. For multi-type requests, the popularity scores are averaged across the selected types
 4. Dishes are then ranked based on their average popularity score
@@ -186,14 +185,15 @@ Finally, the top N dishes (configurable) are returned as output.
 
 #### Clarification on Filtering Scope
 
-Currently, our system supports **structured filtering only** specifically, by one to three restaurant_type_std values (e.g. "pizza restaurant"). These types are extracted during LLM cleaning and matched exactly during the filtering process. This was inspired by best practices in popularity-based recommenders, which focus on transparency and operational simplicity in early-stage deployment @keshetti2020popularity.
-At this stage, we do **not** support:
+Our system currently supports **structured filtering only**, based on exact matches of up to three `restaurant_type_std` values (e.g., "pizza restaurant") extracted during LLM cleaning. This design prioritizes transparency, control, and speed, aligning with early-stage deployment best practices in popularity-based recommenders [@keshetti2020popularity].
 
-- Keyword-based filtering (e.g. searching for "pepperoni")
-- Semantic/embedding-based matching (e.g. interpreting "comfort food" or "something spicy")
-- GPT-powered fuzzy search at recommendation time
+At this stage, we **do not support**:
 
-This was a deliberate choice to prioritize __transparency, control,__ and __execution speed__ in our MVP. Additionally, our dataset, though enriched and cleaned, lacked consistent free-text queries or labelled user intent, which made implementing semantic search or GPT-based query interpretation less feasible at this stage.
+- Keyword-based filtering (e.g., "pepperoni")
+- Semantic matching (e.g., "comfort food")
+- GPT-based fuzzy search
+
+These advanced features were deliberately excluded due to the lack of labeled user intent and to maintain a clear and efficient MVP.
 
 ## Example Use Case: Recommending for a Pizza Restaurant
 
@@ -213,58 +213,52 @@ As shown in the figure below @fig-rec-example, the top-ranked items for a pizza 
 
 To make our recommendation results interpretable and actionable, we built a two-part visualization:
 
-#### CRM System Integration Mockup 
-On the left of @fig-viz-demo, we show a conceptual UI for how this recommendation module could be embedded in the Heymate CRM by the Heymate engineering team. This allows restaurant managers to easily access insights from their dashboard, specifically under the “Recommendation” tab, alongside other operational menus.
+- **CRM Integration Mockup (Left of @fig-viz-demo):** A conceptual UI showing how Heymate’s CRM can embed our recommender. This allows managers to access top dish insights directly from their dashboard.
+- **Altair Bar Chart (Right of @fig-viz-demo):** A visual of top dishes sorted by popularity score. Features include:
+  - Heymate brand colors for top 3 dishes
+  - Percentage labels and hover tooltips for easy exploration
+  - Combined dish base and flavor names for clarity
 
-#### Recommendation Output Visualization
-On the right of @fig-viz-demo is an Altair-based bar chart showcasing the top dishes sorted by computed popularity score. Key design features include:
-
-- Top 3 highlights using Heymate brand colours (yellow, red, rose).
-- Pop score bars are annotated directly with percentage labels.
-- Hover tooltips for dish name and score for ease of exploration.
-- Combined label (dish base + flavor) for intuitive comprehension.
-
-This visualization not only validates that our scoring pipeline works but also provides a clear and professional way for stakeholders to compare and act on dish performance. It is also exportable as a standalone HTML component and ready for dashboard integration.
+This design ensures our scoring pipeline results are both explainable and ready for integration.
 
 ## How to Use the Data Product
 
-We designed this data product to support Heymate’s internal team and clients in making data-informed menu decisions. 
+We designed this product to help Heymate and its clients make informed menu decisions.
 
-### Intended Usage
-Heymate can utilize this tool in two primary ways:
+### Internal Use
 
-- Internal Use Mode: 
-    - Data Update & Validation: When a new data source becomes available, the internal team can upload and process it through the system to evaluate performance with updated inputs.
-    - Testing & Iteration: By inputting internal client restaurant types, internal users can assess the quality of dish name cleaning and observe how the system generates standardized output. This enables iterative refinement and ensures reliability before onboarding new clients.
-- Client-Facing Deployment: On the frontend, a client can simply select their restaurant type (e.g. “pizza restaurant”), and the system returns a list of top recommended dishes based on aggregated popularity metrics from similar restaurants. This empowers merchants to make data-driven menu decisions aligned with current market trends.
+To ensure robustness before onboarding new clients, this internal setup enables iterative refinement of the pipeline: 
+- Data Updates: Heymate staff can upload new datasets to evaluate updates and improvements.
+- Testing & QA: Input client restaurant types to verify dish name cleaning and recommendation logic.
 
-Overall speaking, to enable a scalable, end-to-end pipeline that supports both internal testing and client-facing deployment, we applied several key data science techniques. Below, we highlight three methods that were critical to addressing real-world data challenges.
+### Client Deployment
+
+To support merchants in aligning with current market trends, this tool enables data-driven menu decision-making:
+- Restaurant Type Input: Clients select a restaurant type (e.g., “pizza restaurant”).
+- Recommended Output: The system returns a list of top recommended dishes based on aggregated popularity metrics from similar restaurants.
 
 ## Data Science Methods
 
-We applied many data science techniques in our capstone project and are highlighting 3 here:
-
-- LLM Integration
-- Distributed Deployment
-- Materialized View
+To build a scalable pipeline supporting both internal testing and client deployment, we applied three key data science techniques: **LLM Integration**, **Distributed Deployment**, and **Materialized View**. In the following sections, we describe how each method was applied, along with its limitations and alternative approaches considered. 
 
 ### LLM Integration
-We leveraged large language models (LLMs) to clean and standardize the menu data. The raw data was not available for direct use in our recommendation system due to inconsistencies in formatting, spelling variations, and the presence of multiple languages. By integrating LLMs, we were able to extract key information of dish bases and dish flavors, from item names, categories, and descriptions with high accuracy. Even in the case when the description is missing, the LLMs can still infer the information from the item name and category, as well as the context of the restaurant name.
+
+We used large language models (LLMs) to clean and standardize messy menu data. As discussed in the [Data Cleaning Module](#data-cleaning-module), the raw data was not available for direct use in our recommendation system. The LLM extracted core dish information (base, flavor, combo status, restaurant type) with high accuracy, even without full descriptions.
 
 #### Limitation
 
-This approach requires payment for API usage. After evaluating trade-offs between computational power and cost, we chose to use the **ChatGPT-4o mini** model.
+This approach requires payment for API usage. After evaluating trade-offs between computational power and cost, we chose to use the **ChatGPT-4o mini** model. 
 
 #### Alternative Methods Considered
 
 - Regular Expressions: Effective for extracting structured patterns, but not feasible here due to inconsistent formatting and multilingual input.
 - Custom Deep Learning Model: While potentially powerful, this would require labelled training data and significant time and computational resources. We don’t have such resources within our project scope.
-- Locally Deployed LLM: This could reduce long-term costs, but setup and maintenance would bring practical challenges within our capstone timeline.
 
 ### Distributed Deployment
-Our project involved processing a large dataset, over 3 million rows from the Uber Eats dataset. Cleaning this data sequentially would have taken approximately 5,000 hours, which was not feasible within our timeline. To solve this, we implemented a distributed deployment infrastructure to significantly speed up processing.
-We designed and deployed an HTTP-triggered function to process data in batches. Each instance is triggered via a web request, with the batch range passed as parameters. The system logs the task status at both the start and end of execution. To monitor tasks internally, we also built a dashboard in Looker Studio.
-Initially, we planned to deploy using Azure Functions on our partner’s cloud infrastructure. However, due to security configuration challenges, we were unable to proceed with this plan. As a fallback, we deployed the system locally using the Flask framework and ran up to 20 worker instances concurrently, achieving a 20x speedup.
+
+As mentioned in the [Exploratory Data Analysis](#exploratory-data-analysis) section, the raw Uber Eats dataset originally contained over 5 million rows.To handle this volume efficiently within our project timeline, we implemented a distributed deployment infrastructure. Cleaning this dataset sequentially would have taken over 5,000 hours, so we built an HTTP-triggered batch-processing system using Flask. Each instance processed a defined batch, allowing up to 20 workers to run concurrently and achieving a 20x speedup.
+
+Originally, we planned to use Azure Functions, aligning with our partner’s infrastructure, but security configuration issues prevented deployment. As a fallback, we deployed locally. A Looker Studio dashboard was also developed to monitor processing status and performance.
 
 #### Limitation
 The number of concurrent worker instances is limited by the ChatGPT API rate limit.
@@ -273,14 +267,12 @@ The number of concurrent worker instances is limited by the ChatGPT API rate lim
 We evaluated other cloud deployment solutions, such as EC2 from Amazon Web Services and Google Cloud Functions from the Google Cloud Platform. However, our partner uses Microsoft Azure, and we prioritized consistency within that ecosystem. In the future, our partner’s engineering team plans to migrate our local deployment to Azure Functions, once security configurations are in place.
 
 ### Materialized View
-A Materialized View (also known as a Persistent Derived Table) is a database optimization technique that stores the result of a query as a physical table. This allows for much faster data retrieval by avoiding repeated computation over large datasets.
-Initially, it took around 6 minutes to generate a restaurant recommendation due to the volume of data. Such delays are unacceptable in production, especially since the recommendation module will eventually be integrated into the partner’s CRM system.
-To optimize query performance, we implemented a materialized view to cache pre-computed results. This optimization reduced runtime from 6 minutes to just 3 seconds.
+To speed up recommendations, we implemented a Materialized View, a database optimization technique that stores query results as a physical table, reducing query time from 6 minutes to 3 seconds and making the system suitable for integration into Heymate’s CRM.
 
 #### Limitations
 
-- Additional Storage Cost: The materialized view aggregates data from the original 3-million-row table, incurring some storage cost. However, this is minimal relative to the base data and is not a major concern.
-- Maintenance and Updates: When new data is ingested into the model input pipeline, the materialized view must be refreshed. To handle this, we established an automated workflow that updates the materialized view upon the successful completion of each data ingestion task.
+- Storage Cost: Adds minor overhead due to caching, but manageable.
+- Maintenance: Requires refresh after each data update. We automated refreshment after each successful data ingestion.
 
 ## Justification Over Other Products/Interfaces
 
